--- a/index.html
+++ b/index.html
@@ -3,52 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora Azul e Preto</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Calculadora Estilizada</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="calculator">
-        <input type="text" class="screen" id="screen" disabled>
-        <div class="buttons">
-            <button onclick="clearScreen()">C</button>
-            <button onclick="appendValue('/')" class="operator">/</button>
-            <button onclick="appendValue('*')" class="operator">*</button>
-            <button onclick="backspace()">←</button>
-            <button onclick="appendValue('7')">7</button>
-            <button onclick="appendValue('8')">8</button>
-            <button onclick="appendValue('9')">9</button>
-            <button onclick="appendValue('-')" class="operator">-</button>
-            <button onclick="appendValue('4')">4</button>
-            <button onclick="appendValue('5')">5</button>
-            <button onclick="appendValue('6')">6</button>
-            <button onclick="appendValue('+')" class="operator">+</button>
-            <button onclick="appendValue('1')">1</button>
-            <button onclick="appendValue('2')">2</button>
-            <button onclick="appendValue('3')">3</button>
-            <button onclick="calculate()" class="operator">=</button>
-            <button onclick="appendValue('0')">0</button>
-            <button onclick="appendValue('.')">.</button>
-        </div>
-    </div>
-    <script>
-        function appendValue(value) {
-            document.getElementById('screen').value += value;
-        }
-        function clearScreen() {
-            document.getElementById('screen').value = '';
-        }
-        function backspace() {
-            let screen = document.getElementById('screen');
-            screen.value = screen.value.slice(0, -1);
-        }
-        function calculate() {
-            let screen = document.getElementById('screen');
-            try {
-                screen.value = eval(screen.value);
-            } catch {
-                screen.value = 'Erro';
-            }
-        }
-    </script>
-</body>
-</html>
+    <div class="calculadora">
+        <input type="text" id="display" disabled>
+        <div class="botoes">
+            <button class="botao especial" onclick="limpar()">C</button>
+            <button class="botao" onclick="adicionar('7')">7</button>
+            <button class="botao" onclick="adicionar('8')">8</button>
+            <button class="botao" onclick="adicionar('9')">9</button>
+            <button class="botao operador" onclick="adicionar('/')">÷</button>
+
+            <button class="botao" onclick="adicionar('4')">4</button>
+            <button class="botao" onclick="adicionar('5')">5</button>
+            <button class="botao" onclick="adicionar('6')">6</button>
+            <button class="botao operador" onclick="adicionar('*')">×</button>
+
+            <button class="botao" onclick="adicionar('1')">1</button>
+            <button class="botao" onclick="adicionar('2')">2</button>
+            <button class="botao" onclick="adicionar('3')">3</button>
+            <button class="botao operador" onclick="adicionar('-')">−</button>
+
+            <button class="botao" onclick="adicionar('0')">0</button>
+            <button class="botao" onclick="adicionar('.')">.</button>
+            <button class="botao igual" onclick="calcular()">=</button>
+            <button class="botao operador" onclick="adicionar('+')">
