--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora Estilizada</title>
+    <title>Calculadora Retangular</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -29,4 +29,9 @@
             <button class="botao" onclick="adicionar('0')">0</button>
             <button class="botao" onclick="adicionar('.')">.</button>
             <button class="botao igual" onclick="calcular()">=</button>
-            <button class="botao operador" onclick="adicionar('+')">
+            <button class="botao operador" onclick="adicionar('+')">+</button>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
